plugins {
    id 'java'
    id 'application'
    id 'eclipse'
    alias(libs.plugins.versions)
    alias(libs.plugins.version.catalog.update)
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

group 'com.kousenit'
version '1.0'

application {
    mainClass.set('com.kousenit.fileio.ProcessDictionary')
    applicationDefaultJvmArgs = ['--enable-preview']
}

repositories {
    mavenCentral()
}

dependencies {
    // JSON parsers
    implementation libs.gson
    implementation libs.bundles.moshi
    implementation libs.bundles.jackson

    // Logging
    implementation libs.slf4j.nop

    // Testing
    testImplementation libs.junit.jupiter
    testImplementation libs.assertj
    testImplementation libs.bundles.mockito
    testImplementation libs.wiremock
}

tasks.withType(JavaCompile).configureEach {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
    maxParallelForks = (int) (Runtime.getRuntime().availableProcessors() / 2 + 1)
}
